--- a/templates/superuser/edit_participant.html
+++ b/templates/superuser/edit_participant.html
@@ -75,7 +75,7 @@
             {{ form.as_p }}
 
             <button type="submit">Save</button>
-            <a href="{% url 'view_participants_super' %}"><button type="button">Cancel</button></a>
+            <a href="{% url 'super_user_dashboard' %}"><button type="button">Cancel</button></a>
         </form>
     </div>
 </body>
