--- a/templates/coordinator/coordinator_login.html
+++ b/templates/coordinator/coordinator_login.html
@@ -30,27 +30,28 @@ body{
     top: 50%;
 }
 .background .shape{
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     position: absolute;
-    border-radius: 50%;
+    border-radius: 25%;
+
 }
 .shape:first-child{
     background: linear-gradient(
-        #1845ad,
-        #23a2f6
+        yellow,
+        greenyellow
     );
-    left: -80px;
-    top: -80px;
+    left: -15%;
+    top: 80%;
 }
 .shape:last-child{
     background: linear-gradient(
         to right,
-        #ff512f,
-        #f09819
+       deeppink,
+        hotpink
     );
-    right: -30px;
-    bottom: -80px;
+    right: -15%;
+    top: 80%;
 }
 form{
     height: 520px;
@@ -110,6 +111,19 @@ button{
     font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
+}
+::placeholder{
+    text-align: center;
+}
+.container-fluid{
+    position: absolute;
+    top: 85%;
+    left: 10%;
+    text-align: center;
+    background: rgba(255,0,0,0.3);
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
 }
 .social{
   margin-top: 30px;
