--- a/templates/superuser/coordinators_list.html
+++ b/templates/superuser/coordinators_list.html
@@ -114,8 +114,8 @@ tbody td:hover:before {
       <td>{{ coordinator.email }}</td>
       <td>{{ coordinator.first_name }}</td>
       <td>{{ coordinator.last_name }}</td>
-      <td>{% if coordinator.is_invited %} <span class="tick">&#10004;</span> {% else %} <span class="cross">&#10006;</span> {% endif %}</td>
-      <td>{% if coordinator.is_setup_complete %} <span class="tick">&#10004;</span> {% else %} <span class="cross">&#10006;</span> {% endif %}</td>
+      <td>{% if coordinator.is_invited %} <img width="32" height="32" src="https://img.icons8.com/fluency/48/checked.png" alt="checked"/>{% else %} <img width="32" height="32" src="https://img.icons8.com/fluency/48/cancel.png" alt="cancel"/>{% endif %}</td>
+      <td>{% if coordinator.is_setup_complete %} <img width="32" height="32" src="https://img.icons8.com/fluency/48/checked.png" alt="checked"/>{% else %} <img width="32" height="32" src="https://img.icons8.com/fluency/48/cancel.png" alt="cancel"/>{% endif %}</td>
       <!-- Add more boolean attributes as needed -->
     <td>
         <a href="{% url 'edit_coordinator' coordinator.id %}" class="btn btn-primary">
