--- a/templates/superuser/superuser_login.html
+++ b/templates/superuser/superuser_login.html
@@ -1,88 +1,203 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superuser Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+  <!-- Design by foolishdeveloper.com -->
+    <title>SuperUser Login</title>
 
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <style media="screen">
+      *,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #080710;
+}
 
-        .form-group {
-            margin-bottom: 20px;
-        }
+.background{
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+.background .shape{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    border-radius: 50%;
+}
+.shape:nth-child(1){
+    background: linear-gradient(
+        green,
+        greenyellow
+    );
+    left: -20%;
+    top: -20%;
+}
+.shape:nth-child(2){
+    background: linear-gradient(
+        to right,
+        purple,
+        rebeccapurple
+    );
+    right: -20%;
+    top: 80%;
+}.shape:nth-child(3){
+    background: linear-gradient(
+        orangered,
+        orange
+    );
+    left: 75%;
+    top: -20%;
+}
+.shape:nth-child(4){
+    background: linear-gradient(
+        blue,
+        dodgerblue
+    );
+    left: -20%;
+    top: 80%;
+}
+form{
+    height: 520px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+form *{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+form h3{
+    {#background: linear-gradient(to right,orangered,white,green);#}
+    {#-webkit-background-clip: text;#}
+    {#-webkit-text-fill-color: transparent;#}
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
 
-        label {
-            font-weight: bold;
-        }
+label{
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+input{
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+::placeholder{
+    color: #e5e5e5;
+}
+button{
+    margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+::placeholder{
+    text-align: center;
+}
+.container-fluid{
+    position: absolute;
+    top: 85%;
+    left: 10%;
+    text-align: center;
+    background: rgba(255,0,0,0.3);
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
+}
+.social{
+  margin-top: 30px;
+  display: flex;
+}
+.social div{
+  background: red;
+  width: 150px;
+  border-radius: 3px;
+  padding: 5px 10px 10px 5px;
+  background-color: rgba(255,255,255,0.27);
+  color: #eaf0fb;
+  text-align: center;
+}
+.social div:hover{
+  background-color: rgba(255,255,255,0.47);
+}
+.social .fb{
+  margin-left: 25px;
+}
+.social i{
+  margin-right: 4px;
+}
 
-        input[type="text"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .btn {
-            background-color: #007BFF;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
     </style>
 </head>
 <body>
+    <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
+    <form method="post">
+        <h3>SuperUser Login</h3>
         {% if messages %}
             {% for message in messages %}
-<div class="container-fluid p-0">
-  <div class="alert {{ message.tags }}" role="alert" >
-    {{ message }}
-  </div>
-</div>
-{% endfor %}
+                <div class="container-fluid p-0">
+                    <div class="alert {{ message.tags }}" role="alert" >
+                        {{ message }}
+                    </div>
+                </div>
+            {% endfor %}
         {% endif %}
-    <div class="container">
-        <h2>Superuser Login</h2>
-        {% if messages %}
-            {% for message in messages %}
-            <h2 {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</h2>
-                {% endfor %}
-        {% endif %}
-        <form method="post">
-            {% csrf_token %}
+        {% csrf_token %}
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" placeholder="Username" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn">Login</button>
             </div>
-        </form>
-    </div>
+    </form>
 </body>
 </html>
