Superuser Session Clear Duplicates

--- a/templates/coordinator/setup_coordinator_account.html
+++ b/templates/coordinator/setup_coordinator_account.html
@@ -129,6 +129,11 @@
                 <label for="last_name">Last Name</label>
                 {{ form.last_name }}
             </div>
+            <div class="flex-item">
+                <label for="password">Password</label>
+                {{ form.password }}
+            </div>
+
 
             <div class="flex-item">
                 <label for="date_of_birth">Date of Birth</label>
