--- a/templates/coordinator/participants_list.html
+++ b/templates/coordinator/participants_list.html
@@ -163,7 +163,7 @@ tbody td:hover:before {
 
       <!-- Add more boolean attributes as needed -->
     <td>
-        <a href="{% url 'edit_participant_coordinator' coordinator.id %}"><img width="32" height="32" src="https://img.icons8.com/color/48/edit--v3.png" alt="edit--v3"/></a>
+        <a href="{% url 'edit_participant_coordinator' coordinator.encoded_id %}"><img width="32" height="32" src="https://img.icons8.com/color/48/edit--v3.png" alt="edit--v3"/></a>
       </td>
     </tr>
     {% endfor %}
